Bug 1525890 - Tweak quantumbar result icon alignment. r=adw
Differential Revision: https://phabricator.services.mozilla.com/D19142

UltraBlame original commit: 28f993ee6598d93dcb0540aedd4519e87ddab85b

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -489,6 +489,14 @@ align
 :
 middle
 ;
+transform
+:
+translateY
+(
+-
+2px
+)
+;
 width
 :
 16px
@@ -543,6 +551,38 @@ opacity
 .
 6
 ;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+.
+urlbarView
+-
+type
+-
+icon
+.
+urlbarView
+-
+favicon
+{
+transform
+:
+translateY
+(
+-
+1
+.
+5px
+)
+;
+}
 }
 .
 urlbarView
